--- a/404.html
+++ b/404.html
@@ -1,17 +1,26 @@
----
-layout: default
-comment: false
-share: false
-back: 0
-title: Error 404
----
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <title>Error 404</title>
+    <meta name="author" content="Evgeniy Alekseev" />
+    <meta name="description" content="arcanis' homepage" />
+    <link rel="license" type="text/html" href="/authors" />
+
+    <link rel="stylesheet" href="/resources/styles.css">
+    <link rel="stylesheet" href="/resources/pygment_trac.css">
+    <link rel="shortcut icon" href="/resources/icon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+  </head>
   <body>
     <div class="wrapper">
       <header>
         <h1>404</h1>
-
         <p class="view">Page not found!</p>
-
       </header>
       <section>
 
@@ -20,3 +29,13 @@ title: Error 404
 <img src="/resources/pinkiepie.png" alt="pinkiepie">
 
 <p align="justify">I'm Pinkie Pie. You are seeing me because you want a page that I could not find. I'm sorry. Seriously. I'll try to work better. But now I may suggest you to return to the <a href="/">Homepage</a> or <a href="javascript:history.back()">back</a></p>
+
+      </section>
+      <footer>
+        <p><small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
+      </footer>
+    </div>
+    <script src="/js/scale.fix.js"></script>
+
+  </body>
+</html>
