--- a/ru/404.html
+++ b/ru/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Error 404</title>
+    <title>Ошибка 404</title>
     <meta name="author" content="Evgeniy Alekseev" />
     <meta name="description" content="arcanis' homepage" />
     <link rel="license" type="text/html" href="/authors" />
@@ -20,29 +20,19 @@
     <div class="wrapper">
       <header>
         <h1>404</h1>
-        <p class="view">Page not found!</p>
+        <p class="view">Страница не найдена!</p>
       </header>
       <section>
-<!-- redirection to russian page -->
-  <script>
-    var languageinfo=navigator.language? navigator.language : navigator.userLanguage
-    function redirectpage(dest) {
-    if (window.location.replace) window.location.replace(dest)
-    else window.location=dest
-    }
-    if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/404")
-  </script>
-<!-- redirection to russian page -->
 
-<h3>Hello!</h3>
+<h3>Привет!</h3>
 
 <img src="/resources/pinkiepie.png" alt="pinkiepie">
 
-<p align="justify">I'm Pinkie Pie. You are seeing me because you want a page that I could not find. I'm sorry. Seriously. I'll try to work better. But now I may suggest you to return to the <a href="/">Homepage</a> or <a href="javascript:history.back()">back</a></p>
+<p align="justify">Я Пинки Пай. Ты видишь меня, потому что ты хочешь страницу, которую я не смогла найти. Мне жаль, нет, честно. Я постараюсь работать лучше. А сейчас я могу предложить тебе вернуться на <a href="/ru">домашнюю страницу</a> или <a href="javascript:history.back()">назад</a></p>
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages. <a href="/authors">Authors</a></small></p>
+        <p><small>Расположено на GitHub Pages. <a href="/ru/authors">Авторы</a></small></p>
       </footer>
     </div>
     <script src="/resources/js/scale.fix.js"></script>
