--- a/404.html
+++ b/404.html
@@ -8,8 +8,8 @@
     <meta name="description" content="arcanis' homepage" />
     <link rel="license" type="text/html" href="/authors" />
 
-    <link rel="stylesheet" href="/resources/styles.css">
-    <link rel="stylesheet" href="/resources/pygment_trac.css">
+    <link rel="stylesheet" href="/resources/css/styles.css">
+    <link rel="stylesheet" href="/resources/css/pygment_trac.css">
     <link rel="shortcut icon" href="/resources/icon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
