--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@ title: arcanis' homepage
         <p class="view"><a href="/about">About me</a></p>
 
       </header>
-      <section>
 <!-- redirection to russian page -->
   <script>
-    var languageinfo=navigator.language? navigator.language : navigator.userLanguage
     function redirectpage(dest) {
-    if (window.location.replace) window.location.replace(dest)
-    else window.location=dest
+      if (window.location.replace) window.location.replace(dest)
+      else window.location=dest
     }
-    if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/")
+    if (document.referrer != "http://localhost:4000/ru/") {
+      var languageinfo=navigator.language? navigator.language : navigator.userLanguage
+      if (languageinfo.substr(0,2) == "ru") redirectpage("/ru/")
+    }
   </script>
 <!-- redirection to russian page -->
+      <section>
 
 <h3><a name="welcome" class="anchor" href="#welcome"><span class="octicon octicon-link"></span></a>Welcome</h3>
 <p align="justify">Welcome to my homepage, <code>`echo $USERNAME`</code>. About me you may read on <a href="/about">the link</a>. I'm sorry I don't know html/php/ruby/etc (but I know GoogleFOO! At least, I think so), therefore this page may not look very pretty. But I tried (or may be not). In the blog I will write some papers about programming, living in Archlinux system and may be package maintaining. Also I will create pages for some of <a href="https://github.com/arcan1s">my projects</a>.</p>
